--- a/style.css
+++ b/style.css
@@ -41,8 +41,13 @@ h2 {
   display: none;
 }
 
-.show {
-  display: block;
+.dim {
+  opacity: 0.5;
+}
+
+.row--mobile {
+  display: flex;
+  justify-content: space-between;
 }
 
 .green {
@@ -62,9 +67,55 @@ h2 {
   padding: 2em 0;
 }
 
-.row--mobile {
-  display: flex;
-  justify-content: space-between;
+.nav {
+  z-index: 2;
+  position: absolute;
+  top: 6em;
+  background: #fff;
+  width: 90%;
+}
+
+.nav::before {
+  z-index: 2;
+  content: "";
+  position: absolute;
+  right: 0;
+  top: -25px;
+  border-top: 25px solid transparent;
+  border-left: 25px solid transparent;
+  border-right: 25px solid white;
+  border-bottom: 25px solid white;
+}
+
+.nav__list {
+  width: 50%;
+  margin: 0 auto;
+  list-style: none;
+  text-align: center;
+}
+
+.nav__item {
+  margin-top: 2em;
+}
+
+.nav__link {
+  text-decoration: none;
+  color: var(--dGrayishBlue);
+  font-size: 1.25rem;
+}
+
+.nav__link--button {
+  text-transform: uppercase;
+  font-size: 1rem;
+  display: block;
+  width: fit-content;
+  width: moz-fit-content;
+  margin: 0 auto 2em auto;
+  background: var(--yellow);
+  padding: 1em 1.5em;
+  border-radius: 10em;
+  color: black;
+  font-family: "Fraunces", serif;
 }
 
 .jumbo {
@@ -116,6 +167,10 @@ h2 {
   color: black;
   letter-spacing: 2px;
   display: block;
+}
+.section__link:hover,
+.section__link:focus {
+  border-bottom-width: 10px;
 }
 
 .section__link--pink {
