--- a/style.css
+++ b/style.css
@@ -359,3 +359,66 @@ h2 {
     width: 60%;
   }
 }
+
+@media (min-width: 1200px) {
+  .hide {
+    display: block;
+  }
+
+  .header {
+    padding: 0;
+  }
+
+  .nav::before {
+    display: none;
+  }
+
+  .nav {
+    display: flex;
+    background-color: transparent;
+    position: static;
+    justify-content: flex-end;
+    padding: 0;
+  }
+
+  .nav__logo {
+    align-self: center;
+    width: 10%;
+  }
+
+  .nav__burger {
+    display: none;
+  }
+
+  .nav__list {
+    padding-top: 1em;
+    margin: 0 0 3em 0;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  .nav__item {
+    padding: 0;
+    margin: 0;
+  }
+
+  .nav__item + .nav__item {
+    margin-left: 3em;
+  }
+
+  .nav__link {
+    color: #fff;
+  }
+
+  .nav__link--button {
+    margin: 0;
+    color: black;
+    background-color: #fff;
+  }
+
+  .nav__link--button:hover,
+  .nav__link--button:focus {
+    opacity: 0.5;
+  }
+}
