--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ h2 {
 }
 
 .slice-bg {
-  background-image: url(/images/mobile/image-header.jpg);
+  background-image: url(images/mobile/image-header.jpg);
   background-size: 100% 100%;
   background-repeat: no-repeat;
 }
@@ -147,11 +147,11 @@ h2 {
 }
 
 .section:nth-of-type(1) .section__img-container {
-  background-image: url("/images/mobile/image-transform.jpg");
+  background-image: url(images/mobile/image-transform.jpg);
 }
 
 .section:nth-of-type(2) .section__img-container {
-  background-image: url("/images/mobile/image-stand-out.jpg");
+  background-image: url(images/mobile/image-stand-out.jpg);
 }
 
 .section__content {
@@ -175,7 +175,7 @@ h2 {
 }
 
 .section__link {
-  width: 50%;
+  width: fit-content;
   margin: 0 auto 3em auto;
   font-family: "Fraunces", serif;
   text-transform: uppercase;
@@ -201,11 +201,11 @@ h2 {
 }
 
 .cherry-bg {
-  background-image: url(/images/mobile/image-graphic-design.jpg);
+  background-image: url(images/mobile/image-graphic-design.jpg);
 }
 
 .orange-bg {
-  background-image: url(/images/mobile/image-photography.jpg);
+  background-image: url(images/mobile/image-photography.jpg);
 }
 
 .section__title--test {
@@ -252,7 +252,7 @@ h2 {
 
 .gallery__img-container {
   width: 100%;
-  min-height: 20vh;
+  min-height: 22vh;
   background-size: 100% 100%;
 }
 
@@ -335,7 +335,7 @@ h2 {
   }
 
   .slice-bg {
-    background-image: url(/images/desktop/image-header.jpg);
+    background-image: url(images/desktop/image-header.jpg);
     background-size: cover;
     background-position: center;
   }
@@ -351,11 +351,11 @@ h2 {
   }
 
   .section:nth-of-type(1) .section__img-container {
-    background-image: url("/images/desktop/image-transform.jpg");
+    background-image: url(images/desktop/image-transform.jpg);
   }
 
   .section:nth-of-type(2) .section__img-container {
-    background-image: url("/images/desktop/image-stand-out.jpg");
+    background-image: url(images/desktop/image-stand-out.jpg);
   }
 
   .cherry-bg,
@@ -377,6 +377,10 @@ h2 {
 }
 
 @media (min-width: 1200px) {
+  .container {
+    width: 80%;
+  }
+
   .hide {
     display: block;
   }
@@ -460,18 +464,20 @@ h2 {
 
   .section__title,
   .section__text {
-    width: 50%;
+    width: 66%;
     margin-left: auto;
     margin-right: auto;
   }
 
   .section__link {
     margin-top: 5em;
-    width: fit-content;
+    margin-right: auto;
+    margin-left: 8.27em;
   }
 
   .section__img-container {
-    background-size: 100% 100%;
+    background-size: cover;
+    background-position: center;
   }
 
   .cherry-bg {
@@ -485,7 +491,9 @@ h2 {
   .cherry-bg,
   .orange-bg {
     text-align: center;
-    min-height: 75vh;
+    min-height: 60vh;
+    background-size: cover;
+    background-position: top;
   }
 
   .section__content--two-cols {
@@ -495,12 +503,13 @@ h2 {
   }
 
   .section__title--two-cols {
-    font-size: 3rem;
+    font-size: 2.2rem;
     margin-top: 2em;
   }
 
   .section__title--test {
     font-size: 1.5rem;
+    margin-bottom: -1.5em;
   }
 
   .test {
