--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ h2 {
 
 .section__title {
   font-size: 2rem;
+  font-weight: 900;
   line-height: 1.25em;
   padding-top: 2em;
   color: var(--vDarkDesaturatedBlue);
@@ -181,13 +182,23 @@ h2 {
   text-transform: uppercase;
   font-size: 1rem;
   text-decoration: none;
-  border-bottom: 5px var(--yellow) solid;
+  border-bottom: 5px hsl(51, 100%, 80%) solid;
   color: black;
   letter-spacing: 2px;
   display: block;
 }
 
 .section__link--pink {
+  border-color: hsl(7, 99%, 90%);
+}
+
+.section__link:hover,
+.section__link:focus {
+  border-bottom: 5px var(--yellow) solid;
+}
+
+.section__link--pink:hover,
+.section__link--pink:focus {
   border-color: var(--softRed);
 }
 
@@ -386,7 +397,7 @@ h2 {
   }
 
   .slice-bg {
-    min-height: 100vh;
+    min-height: 80vh;
   }
 
   .header {
@@ -448,9 +459,8 @@ h2 {
 
   .jumbo__title {
     letter-spacing: 10px;
-    font-size: 5rem;
+    font-size: 4rem;
     padding-top: 1em;
-    margin-bottom: 0.75em;
   }
 
   .section__content {
@@ -498,6 +508,8 @@ h2 {
 
   .section__content--two-cols {
     text-align: center;
+    width: 90%;
+    margin: 0 auto;
     padding: 1em 0;
     font-size: 1rem;
   }
@@ -509,11 +521,16 @@ h2 {
 
   .section__title--test {
     font-size: 1.5rem;
+    padding-top: 5em;
     margin-bottom: -1.5em;
   }
 
   .test {
     padding: 2.5em 0;
+  }
+
+  .test__quote {
+    min-height: 10vh;
   }
 
   .test__img {
