--- a/style.css
+++ b/style.css
@@ -122,6 +122,11 @@ h2 {
   font-family: "Fraunces", serif;
 }
 
+.nav__link:hover,
+.nav__link:focus {
+  opacity: 0.5;
+}
+
 .jumbo {
   min-height: 55vh;
 }
@@ -177,6 +182,7 @@ h2 {
 
 .section__link {
   width: fit-content;
+  width: -moz-fit-content;
   margin: 0 auto 3em auto;
   font-family: "Fraunces", serif;
   text-transform: uppercase;
@@ -397,7 +403,7 @@ h2 {
   }
 
   .slice-bg {
-    min-height: 80vh;
+    min-height: 100vh;
   }
 
   .header {
